Bug 146489 - Numbered list appears in rtf document
Summary: Numbered list appears in rtf document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.4.0 target:7.3.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-12-30 16:32 UTC by carlopav
Modified: 2022-01-15 21:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
SCIA_relazione_tecnica_di_asseverazione_-_COMPILABILE4.rtf: file from comment 0 (638.76 KB, application/rtf)
2022-01-04 08:01 UTC, Justin L
Details
SCIA_relazione_tecnica_di_asseverazione_-_COMPILABILE4.pdf: from Word 2016 (721.25 KB, application/pdf)
2022-01-04 08:27 UTC, Justin L
Details
minimized_146489.odt: clean-room, made from scratch reproducer (11.83 KB, application/vnd.oasis.opendocument.text)
2022-01-04 18:08 UTC, Justin L
Details
minimized_v2_146489.odt: clean-room reproducer when round-tripped as RTF (11.50 KB, application/vnd.oasis.opendocument.text)
2022-01-05 07:12 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description carlopav 2021-12-30 16:32:43 UTC
Description:
Dear developers, i'm writing to signal a bug opening this document: https://www.dropbox.com/s/ye49707wryk4q8s/SCIA_relazione_tecnica_di_asseverazione_-_COMPILABILE4.rtf?dl=0

Once the document is opened, each row appears as a numbered list, included empty lines and tables.

Steps to Reproduce:
1.Open the document and go to page 2
2.
3.

Actual Results:
Every line is formatted as a numbered list

Expected Results:
the numbered list formatting must only appear in some parts of the document.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 12; OS: Windows 10.0 Build 22000; UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: CL
Comment 1 Telesto 2021-12-31 15:08:59 UTC
Repro with
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1bb0e177124d5d6661b72df6c7d848fb23639652
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

and with
Version: 6.4.0.0.alpha0+ (x64)
Build ID: c56bf1479cc71d1a2b0639f6383e90c1f7e3655b
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

and with
Version: 6.0.6.0.0+
Build ID: c30963b8b4bbbe42a24b97aafa161eff9d7ccdd4
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

not with
Version: 5.3.0.0.alpha0+
Build ID: 75239b77139434db9be5e0e7e133e3661c5404b0
CPU Threads: 4; OS Version: Windows 6.29; UI Render: default; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 raal 2022-01-04 06:48:14 UTC
bisected to
/bibisect-win32-6.0: ce0a01278ed3d179e50a138095dc58d3b7288d70 is the first bad commit
commit ce0a01278ed3d179e50a138095dc58d3b7288d70
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Jul 27 07:06:53 2017 -0700

    source fdfdea4d5af51a68f2d497cc5c3359d74c385fd5

https://git.libreoffice.org/core/+/fdfdea4d5af51a68f2d497cc5c3359d74c385fd5
  tdf#82173 writerfilter: apply char properties to footnote

Adding CC to: Justin Luth
Comment 3 Justin L 2022-01-04 08:01:30 UTC
Created attachment 177302 [details]
SCIA_relazione_tecnica_di_asseverazione_-_COMPILABILE4.rtf: file from comment 0
Comment 4 Justin L 2022-01-04 08:27:13 UTC
Created attachment 177303 [details]
SCIA_relazione_tecnica_di_asseverazione_-_COMPILABILE4.pdf: from Word 2016
Comment 5 Justin L 2022-01-04 08:49:33 UTC
bug 108949 had a similar sounding problem. A "bail out if RTF" proposed patch was scrapped for an alternate solution - which obviously isn't good enough for this document.
Comment 6 Justin L 2022-01-04 10:07:17 UTC
(In reply to Justin L from comment #5)
> A "bail out if RTF" patch
breaks unit tests in rtf_export3. So a real fix needs to be found.

I'm guessing that "\line " means to turn off numbering. That seems to be lost on this paragraph containing the footnote. Is this perhaps a toggle?
Comment 7 Justin L 2022-01-04 13:54:55 UTC
proposed fix at http://gerrit.libreoffice.org/c/core/+/127943
Comment 8 Justin L 2022-01-04 18:08:39 UTC
Created attachment 177310 [details]
minimized_146489.odt: clean-room, made from scratch reproducer

It definitely seems like tables play a big part in this. An identical document without the table didn't exhibit the problem.
Comment 9 carlopav 2022-01-04 18:10:12 UTC
thanks for taking the time to investigate further.
Comment 10 Justin L 2022-01-05 07:12:39 UTC
Created attachment 177320 [details]
minimized_v2_146489.odt: clean-room reproducer when round-tripped as RTF

The RTF results from this are very unpredictable in MS Word.
When opened from an untrusted share, the uneditable preview showed the footnote caller in large red letters (as expected). But as soon as it is in edit/trusted mode, then both instances were just normal size/black. Very strange.

In LO, the in-table caller is normal/black, but the second, normal paragraph caller is large/red as I would have expected them to be.

Since this is so unexpected in Word, I'm not going to pursue these additional anomalies any further.
Comment 11 Commit Notification 2022-01-05 08:45:47 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44c37c4af2d23d1469cdeeb56f2f5a2bef493986

tdf#146489 writerfilter: ensure only character properties

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-01-05 10:36:21 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/411cc8af8490ba307245c689ed5714f612bb9d6f

tdf#146489 writerfilter: ensure only character properties

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 carlopav 2022-01-15 21:49:08 UTC
Tested, I can confirm the fix works perfectly!

Version: 7.3.1.0.0+ (x64) / LibreOffice Community
Build ID: fc8b90c3d750684b506989d1456f31c2f76e51fc
CPU threads: 12; OS: Windows 10.0 Build 22000; UI render: Skia/Vulkan; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: CL

Many thanks!