tdf#146489 writerfilter: ensure only character properties

This is another RTF regression found against LO 6.0's
commit fdfdea4d5af51a68f2d497cc5c3359d74c385fd5
   tdf#82173 writerfilter: apply char properties to footnote

The original commit in LO 6.0 intended that only character properties
were used. A follow-up commit for RTF tried to ensure that
these would be on the top of the stack.

However, in this case, it seems like somehow the table is
getting involved in putting the paragraph context
on the top. (Actually, there is no
GetTopContextOfType(CONTEXT_CHARACTER) at all.)

In any case, aFontProperties should only contain
character properties, so ensure that.

The unit test shows that there is still some kind
of import problem, because the footnote marker
should be a large, red character, but it is just
normal text. See tdf#108949.

Change-Id: I1ea7256891b198046f79f0d3a36e43d6c2ae3383
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127943
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 44c37c4af2d23d1469cdeeb56f2f5a2bef493986)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127954
(cherry picked from commit 411cc8af8490ba307245c689ed5714f612bb9d6f)