writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -2946,7 +2946,9 @@ void DomainMapper_Impl::PushFootOrEndnote( bool bIsFootnote )
             uno::UNO_QUERY_THROW );
         uno::Reference< text::XFootnote > xFootnote( xFootnoteText, uno::UNO_QUERY_THROW );
         pTopContext->SetFootnote(xFootnote, sFootnoteCharStyleName);
-        uno::Sequence< beans::PropertyValue > aFontProperties = pTopContext->GetPropertyValues();
+        uno::Sequence< beans::PropertyValue > aFontProperties;
+        if (GetTopContextOfType(CONTEXT_CHARACTER))
+            aFontProperties = GetTopContextOfType(CONTEXT_CHARACTER)->GetPropertyValues();
         appendTextContent( uno::Reference< text::XTextContent >( xFootnoteText, uno::UNO_QUERY_THROW ), aFontProperties );
         m_aTextAppendStack.push(TextAppendContext(uno::Reference< text::XTextAppend >( xFootnoteText, uno::UNO_QUERY_THROW ),
                     xFootnoteText->createTextCursorByRange(xFootnoteText->getStart())));
